--- a/plugins/powershell/requirements.txt
+++ b/plugins/powershell/requirements.txt
@@ -4,3 +4,4 @@
 git+https://github.com/komand/pywinrm.git@v0.3.1dev0#pywinrm
 requests-kerberos==0.12.0
 requests-credssp==1.1.0
+parameterized      0.8.1
