Updated docker file to include curl for adding attachment

--- a/plugins/samanage/Dockerfile
+++ b/plugins/samanage/Dockerfile
@@ -6,6 +6,7 @@ LABEL type=plugin
 
 
 # Add any custom package dependencies here
+RUN apt-get update && apt-get install curl -y
 # NOTE: Add pip packages to requirements.txt
 
 # End package dependencies
