--- a/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
+++ b/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
@@ -9,7 +9,7 @@ status: []
 description: This plugin utilizes Cisco Umbrella Enforcement to inherit the ability to send
   security events from platform/service/appliance within a customer environment
   to the Cisco security cloud for enforcement
-version: 1.0.2
+version: 1.1.0
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/cisco_umbrella_enforcement
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
@@ -135,15 +135,25 @@ types:
       description: Domain name
       required: true
     lastSeenAt:
-      type: string
+      type: integer
       title: Last seen malware
       description: Unix timestamp last seen
+      required: true
+  domains:
+    data:
+      type: '[]data'
+      description: List of domains
+      required: true
+    meta:
+      type: meta
+      description: Meta Data
       required: true
 connection:
   api_key:
     title: API Key
     type: credential_secret_key
-    description: Enter API key e.g. 1111-2222-3333-4444
+    description: Cisco Umbrella Management API key
+    example: 9de5069c5afe602b2ea0a04b66beb2c0
     required: true
   ssl_verify:
     title: SSL Verify
@@ -172,17 +182,10 @@ actions:
     description: Gather the lists of domains already added to the shared customer's
       domain list
     output:
-      meta:
-        title: Meta
-        description: The meta array shows which page of results is available, the
-          number of results and next and previous available pages to query
-        type: meta
-        required: true
-      data:
+      domains:
         title: Domain List Query Results
-        description: The data array contains the domains in the domain list, along
-          with a unique ID number for each domain
-        type: '[]data'
+        description: Array containing domains in the domain list
+        type: domains
         required: true
   delete_domain_by_id:
     title: Delete Domain by ID
@@ -203,7 +206,7 @@ actions:
     title: Delete Domain by Name
     description: Delete domain from user domain list
     input:
-      domain:
+      name:
         type: string
         title: Domain
         description: Domain name
