Finished add event and removed fluff from checksum

--- a/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
+++ b/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
@@ -183,7 +183,7 @@ actions:
       ID:
         title: ID List
         description: List of added IDs
-        type: '[]string'
+        type: object
         required: true
   domains:
     title: List Domains
