--- a/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
+++ b/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
@@ -168,6 +168,7 @@ connection:
     description: Boolean value to indicate whether to add SSL verify to requests
     type: boolean
     required: true
+    example: true
     default: true
 actions:
   add_event:
